...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yvI-n1-mru">
                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VMD-JX-Zbl">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
                                        <state key="normal" title="Button" image="cofradias"/>
                                        <connections>
                                            <segue destination="Vam-sx-4Ka" kind="show" id="RJf-Bb-IRo"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KtI-gA-5YM">
                                        <rect key="frame" x="0.0" y="115" width="375" height="115"/>
...
                                        <connections>
                                            <segue destination="CSy-iE-rlz" kind="show" id="MrQ-oJ-pHz"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQz-XQ-5Jy">
                                        <rect key="frame" x="0.0" y="575" width="375" height="115"/>
                                        <state key="normal" image="ajustes"/>
                                        <connections>
                                            <segue destination="6sA-Gv-HZu" kind="show" id="R0u-Ka-3sM"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
                            <constraint firstItem="yvI-n1-mru" firstAttribute="leading" secondItem="MsD-jT-tIr" secondAttribute="leading" id="Sxc-Wo-Tge"/>
                            <constraint firstItem="yvI-n1-mru" firstAttribute="trailing" secondItem="MsD-jT-tIr" secondAttribute="trailing" id="axJ-HQ-9nv"/>
                            <constraint firstItem="yvI-n1-mru" firstAttribute="bottom" secondItem="MsD-jT-tIr" secondAttribute="bottom" id="kPB-3V-tAe"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="MsD-jT-tIr"/>
                    </view>
                    <navigationItem key="navigationItem" title="Semana Santa de Valladolid" id="iJV-jw-BAw"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Fb2-b4-DMn" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="529" y="134"/>
        </scene>
        <!--Cofradias View Controller-->
...
                            <constraint firstItem="6k0-eU-JeW" firstAttribute="leading" secondItem="hCw-Rj-pue" secondAttribute="leading" id="ksY-Wd-hmc"/>
                            <constraint firstItem="rZY-Az-TvX" firstAttribute="leading" secondItem="hCw-Rj-pue" secondAttribute="leading" id="qak-FD-mSp"/>
                            <constraint firstItem="hCw-Rj-pue" firstAttribute="trailing" secondItem="rZY-Az-TvX" secondAttribute="trailing" id="vkq-Ca-Tm4"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hCw-Rj-pue"/>
                    </view>
                    <navigationItem key="navigationItem" title="Procesiones por días" id="6UK-Nu-sO9"/>
                    <connections>
                        <outlet property="pickerDia" destination="6k0-eU-JeW" id="gKN-sO-ong"/>
                        <outlet property="tableView" destination="rZY-Az-TvX" id="dRM-qh-eCZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0kk-1W-26B" sceneMemberID="firstResponder"/>
...
